# The-newest

./: README.md  main.py  pyproject.toml
src/: Integration_Calc.py  mask.py  processing.py  widget.py
tests/: contest.py  tests_main.py
