[tool.poetry]
name = "poetry env use python3-8"
version = "3.8"
description = ""
authors = ["Forest"]
readme = "README.md"
packages = [{include = "poetry env use python3"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^6.0.0"
mypy = "^1.14.1"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"

[build-system]
requires = 'poetry_core'
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = "'''"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
# максимальная длина строки
line_length = 119


